<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirportMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_place">Search here …</string>
    <string name="search_button">搜索地方的按钮</string>
    <string name="B1">B1</string>
    <string name="F1">F1</string>
    <string name="F2">F2</string>
    <string name="navigation">开始导航</string>
    <string name="find_mid_place">寻找中点</string>
    <string name="start_place">起点位置:</string>
    <string name="end_place">终点位置:</string>
    <string name="middle_place">中点位置:</string>
    <string name="middle_place_text">默认为空值</string>
    <string name="myPlace">我的位置</string>
    <string name="confirm_mid_place">确定中点</string>
    <string name="middle_place_you_want_to_go">请输入想去的中点</string>
    <string name="end_place_you_want_to_go">请点击后输入位置</string>

</resources>
